# catppuccin-rs

./: Cargo.toml  build.rs
examples/example/: Cargo.toml  custom.json  main.rs  palette.json
examples/example/src/: main.rs
src/: lib.rs
